@startuml

title __CONTROLLERS's Class Diagram__\n

  namespace com.vrush.microservices.consumer {
    namespace controllers {
      class com.vrush.microservices.consumer.controllers.BookingController {
          {static} - log : Logger
          + BookingController()
          + home()
          + save()
      }
    }
  }
  

  namespace com.vrush.microservices.consumer {
    namespace controllers {
      class com.vrush.microservices.consumer.controllers.RoomController {
          {static} - log : Logger
          + RoomController()
          + availableRooms()
          + rooms()
          - populateModels()
          - validateDates()
      }
    }
  }
  

  namespace com.vrush.microservices.consumer {
    namespace controllers {
      class com.vrush.microservices.consumer.controllers.SiteController {
          + SiteController()
          + home()
      }
    }
  }
  

  com.vrush.microservices.consumer.controllers.BookingController o-- com.vrush.microservices.consumer.service.RoomService : roomService
  com.vrush.microservices.consumer.controllers.BookingController o-- com.vrush.microservices.consumer.service.BookingService : service
  com.vrush.microservices.consumer.controllers.RoomController o-- com.vrush.microservices.consumer.service.RoomService : service
  com.vrush.microservices.consumer.controllers.SiteController o-- com.vrush.microservices.consumer.service.RoomService : roomService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
